# prolog

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  config.toml  env.sh
doc/: class-model.md  dev-notes.md  notes.md
doc/links/: ThePhD-sol2- Sol3 (sol2 v3.0) - a C++ <-> Lua API wrapper with advanced features and top notch perfo….webloc
doc/links/orms/: BrainlessLabs-bun- Bun is a simple to use C++ Object Database, Object Relational Mapper (ORM) and ke….webloc  ODB - C++ Object-Relational Mapping (ORM).webloc  fnc12-sqlite_orm- ❤️ SQLite ORM light header only library for modern C++.webloc  paulftw-hiberlite- C++ ORM for SQLite.webloc
doc/notes/: setup.md  testing.md
include/: program.hpp
include/core/: process.hpp
include/db/: store.hpp
include/model/: common.hpp  customer.hpp  quote.hpp  rental.hpp  vehicle.hpp
notes/links/: About RinSim | RinSim.webloc  KevinFasusi-supplychainpy- Supplychainpy is a Python library for supply chain analysis, modelling an….webloc  mapbox-node-or-tools- Node.js bindings for or-tools vehicle routing problems.webloc
research/: Google or-tools User's Manual.webloc  Logistimo | Supply chain, cold chain and logistics for the next billion - Logistimo.webloc  google-or-tools- Google's Operations Research tools-.webloc  rinde-RinLog- RinLog is a collection of (agent) implementations for logistics problems..webloc
scripts/: build.sh
src/: CMakeLists.txt  program.cpp  scripting.cpp  scripting_lua.cpp  scripting_py.cpp
src/core/: CMakeLists.txt  process.cpp
src/db/: CMakeLists.txt  store.cpp
src/model/: CMakeLists.txt  vehicle.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_date.cpp
tests/lua_lib/: player.cpp
